--- a/config.toml
+++ b/config.toml
@@ -64,13 +64,13 @@ soundcloud_subscribe = "https://soundcloud.com/user-716837148"
 #pocketcasts_subscribe = "http://pcasts.in/feed/feeds.soundcloud.com/users/soundcloud:users:203144248/sounds.rss"
 #mailchimp_subscribe = "//arresteddevops.us3.list-manage.com/subscribe/post?u=5e4cbcac996bb9df25f970a89&amp;id=154fa76bcc"
 #rss_subscribe = "http://feed.com/myfeed" #only set this if you don't want to use the built-in feed
-description = "Welcome to the Advance Tech Podcast where we interview special guests defining the technology of tomorrow and bring you news you won’t hear in the mainstream media. Hosted by Alexandra Moxin and Adam Dymitruk. Sponsored by Adaptech Solutions, building software that defies convention. Get your startup off on the right foot for the future and avoid the dreaded MVP rewrite, get out of your legacy code trap, and get trained in modern software architecture practices. Visit [Adaptech Solutions](https://adaptechsolutions.net/) today to see why we're different."
+description = "<p>Welcome to the Advance Tech Podcast where we bring you news you won’t hear in the mainstream media. Hosted by Alexandra Moxin and Adam Dymitruk. We provide a spotlight for disruptive industry and initiatives and interview guests defining the technology of tomorrow.</p><p>Advance Tech Media is dedicated to supporting and advancing the responsible application of bleeding edge technology and practices that foster quality, equality and sustainability."
 media_prefix = "https://advancetechmedia.org/"
   [params.feed]
     feed_copyright = "Copyright 2017 Advance Tech Media" #do not use markdown in this field; it is used in the feed
-    itunes_subtitle = "Bringing you the latest in technology and open source news!" #no markdown or HTML
+    itunes_subtitle = "Bringing you the latest in technology, sustainability and open source news!" #no markdown or HTML
     itunes_author = "Alexandra Moxin" #no markdown or HTML
-    itunes_summary = "The Advance Tech Podcast brings you advanced technology and open source news you won’t hear in the mainstream media. Hosted by Alexandra Moxin and Adam Dymitruk. We aim to give you the unbiased truth in advanced technology and interview a special guest who is defining the technology of tomorrow." # Limited to 4000 characters or less, plain text, no HTML
+    itunes_summary = "The Advance Tech Podcast brings you the latest in bleeding edge technology and open source news you won’t hear in the mainstream media. Hosted by Alexandra Moxin and Adam Dymitruk. We aim to give you the unbiased truth and interview guests who are defining the technology of tomorrow." # Limited to 4000 characters or less, plain text, no HTML
     itunes_owner_name = "Advance Tech Media"
     itunes_owner_email = "alexandra.moxin@advancetechmedia.org" #contains the e-mail address that will be used to contact the owner of the Podcast for communication specifically about their Podcast on iTunes. It will not be publicly displayed on iTunes.
     itunes_image = "img/Advancetechmediaavataritunes.png" #fqdn to the image art for your podcast
@@ -110,7 +110,7 @@ media_prefix = "https://advancetechmedia.org/"
     [params.authors.Bridget]
       name = "Alexandra Moxin"
       thumbnail = "img/host/Alex.jpg"
-      bio = "Alexandra is dedicated to advancing the responsible application of bleeding edge technology such as blockchain, Bitcoin, Ethereum, other tokens and cryptocurrencies, AI, VR/AR, distributed data, and the platforms that support these. She is Co-founder and Host of the Advance Tech Podcast where she interviews innovative and forward thinking experts in development, start-up and business communities and others who are defining the technology of tomorrow. As Director of Business Development for Adaptech Solutions she meets with management teams and decision makers and creates new opportunities by promoting and fostering community development and industry partnerships. Alexandra has over a decade of experience managing software projects and brings an understanding of how event based system implementations impact organisations. She is a student of the patterns in DDD/CQRS/ES and how they apply to Conway’s Law."
+      bio = "Global Connector, Leader, Founder of Advance Tech Media and Host of the Advance Tech Podcast. Alexandra is dedicated to advancing the responsible application of bleeding edge technology such as AI, neural and distributed networks, ML and deep learning, blockchain, Bitcoin, Ethereum, cryptocurrency, VR/AR, distributed data, and the event based platforms that support these. Alexandra has over a decade of experience developing business and community and brings an understanding of how event based system implementations impact organisations. She is a strong proponent of open source communities."
       [params.authors.Bridget.social]
         twitter = "Alexandra933"
         linkedin = "alexandra-moxin"
