--- a/config.toml
+++ b/config.toml
@@ -61,11 +61,11 @@ android_subscribe = "http://www.subscribeonandroid.com/advancetechmedia.org/epis
 google_play_subscribe = "https://play.google.com/music/listen?u=0#/ps/Ixpkgrijhidwwxqyz4qwfh4azhm"
 #sticher_subscribe = "http://www.stitcher.com/podcast/arrested-devops-2/arrested-devops"
 soundcloud_subscribe = "https://soundcloud.com/user-716837148"
-#pocketcasts_subscribe = "http://pcasts.in/feed/feeds.soundcloud.com/users/soundcloud:users:203144248/sounds.rss"
+#pocketcasts_subscribe = "http://pcasts.in/feed/feeds.soundcloud.com/users/soundcloud:users:716837148/sounds.rss"
 #mailchimp_subscribe = "//arresteddevops.us3.list-manage.com/subscribe/post?u=5e4cbcac996bb9df25f970a89&amp;id=154fa76bcc"
 #rss_subscribe = "http://feed.com/myfeed" #only set this if you don't want to use the built-in feed
 description = "<p>Welcome to the Advance Tech Podcast bringing you news you won’t hear in the mainstream media. Hosted by Alexandra Moxin and Adam Dymitruk. We provide a spotlight for innovative and disruptive initiatives and interview guests defining the technology of tomorrow.</p><p>Advance Tech Media is dedicated to advancing research and supporting the responsible application of bleeding edge technology and practices that foster quality, equality and sustainability."
-media_prefix = "https://advancetechmedia.org/"
+media_prefix = "http://advancetechmedia.org/"
   [params.feed]
     feed_copyright = "Copyright 2017 Advance Tech Media" #do not use markdown in this field; it is used in the feed
     itunes_subtitle = "Bringing you the latest in technology, sustainability and open source news!" #no markdown or HTML
@@ -73,7 +73,7 @@ media_prefix = "https://advancetechmedia.org/"
     itunes_summary = "The Advance Tech Podcast brings you the latest in bleeding edge technology and open source news you won’t hear in the mainstream media. Hosted by Alexandra Moxin and Adam Dymitruk. We aim to give you the unbiased truth and interview guests who are defining the technology of tomorrow." # Limited to 4000 characters or less, plain text, no HTML
     itunes_owner_name = "Advance Tech Media"
     itunes_owner_email = "alexandra.moxin@advancetechmedia.org" #contains the e-mail address that will be used to contact the owner of the Podcast for communication specifically about their Podcast on iTunes. It will not be publicly displayed on iTunes.
-    itunes_image = "img/Advancetechmediaavataritunes.png" #fqdn to the image art for your podcast
+    itunes_image = "http://www.advancetechmedia.org/static/img/advancetechmediaavataritunes.png" #fqdn to the image art for your podcast
     itunes_top_category = "Technology"
     itunes_first_sub_category = "Tech News"
     itunes_second_sub_category = "Software How-To"
@@ -107,11 +107,11 @@ media_prefix = "https://advancetechmedia.org/"
         #pinterest = "mattstratton"
         #instagram = "instagram"
         youtube = "adaptech"
-    [params.authors.Bridget]
+    [params.authors.Alex]
       name = "Alexandra Moxin"
       thumbnail = "img/host/Alex.jpg"
       bio = "Global Connector, Leader, Founder of Advance Tech Media and Host of the Advance Tech Podcast. Alexandra is dedicated to advancing research in and the responsible application of bleeding edge technology such as AI, neural and distributed networks, ML and deep learning, blockchain, cryptocurrency, VR/AR and the event based platforms that support these. Alexandra has over a decade of experience developing business and community and brings an understanding of how event based system implementations impact organisations. She is a strong proponent of open source communities."
-      [params.authors.Bridget.social]
+      [params.authors.Alex.social]
         twitter = "Alexandra933"
         linkedin = "alexandra-moxin"
         facebook = "alexandra.moxin"
