--- a/config.toml
+++ b/config.toml
@@ -55,7 +55,7 @@ enable_jumbo = "true"
 #truncate = "100"
 about_logo = "/img/Advancetechmedia avatar.png"
 
-copyright_notice = "Copyright 2017 [Advance Tech Media](https://www.advancetechmedia.org)"
+copyright_notice = "Copyright 2017 [Advance Tech Media](https://advancetechmedia.org)"
 itunes_subscribe = "https://itunes.apple.com/ca/podcast/advance-tech-podcast/id1278222771"
 android_subscribe = "http://www.subscribeonandroid.com/advancetechmedia.org/episode/index.xml"
 google_play_subscribe = "https://play.google.com/music/listen?u=0#/ps/Ixpkgrijhidwwxqyz4qwfh4azhm"
@@ -73,7 +73,7 @@ media_prefix = "http://advancetechmedia.org/"
     itunes_summary = "The Advance Tech Podcast brings you the latest in bleeding edge technology and open source news you won’t hear in the mainstream media. Hosted by Alexandra Moxin and Adam Dymitruk. We aim to give you the unbiased truth and interview guests who are defining the technology of tomorrow." # Limited to 4000 characters or less, plain text, no HTML
     itunes_owner_name = "Advance Tech Media"
     itunes_owner_email = "alexandra.moxin@advancetechmedia.org" #contains the e-mail address that will be used to contact the owner of the Podcast for communication specifically about their Podcast on iTunes. It will not be publicly displayed on iTunes.
-    itunes_image = "http://www.advancetechmedia.org/static/img/advancetechmediaavataritunes.png" #fqdn to the image art for your podcast
+    itunes_image = "http://advancetechmedia.org/img/advancetechmediaavataritunes.png" #fqdn to the image art for your podcast
     itunes_top_category = "Technology"
     itunes_first_sub_category = "Tech News"
     itunes_second_sub_category = "Software How-To"
