--- a/config.toml
+++ b/config.toml
@@ -17,10 +17,10 @@ themesdir = "themes"
 # The menu name must be "Main"
 # The menus are sorted based upon their identifier
 
-#[[Menu.Main]]
-#    name = "Contact"
-#    identifier = "contact"
-#    url = "contact"
+[[Menu.Main]]
+    name = "Advance Tech Social"
+    identifier = "contact"
+    url = "contact"
 
 [[Menu.Main]]
     name = "Guests"
@@ -55,7 +55,7 @@ enable_jumbo = "true"
 #truncate = "100"
 about_logo = "/img/Advancetechmedia avatar.png"
 
-copyright_notice = "Copyright 2017 [Advance Tech Media](https://advancetechmedia.org)"
+copyright_notice = "Copyright 2017 - 2018 [Advance Tech Media](https://advancetechmedia.org)"
 itunes_subscribe = "https://itunes.apple.com/ca/podcast/advance-tech-podcast/id1278222771"
 android_subscribe = "http://www.subscribeonandroid.com/advancetechmedia.org/episode/index.xml"
 google_play_subscribe = "https://play.google.com/music/listen?u=0#/ps/Ixpkgrijhidwwxqyz4qwfh4azhm"
@@ -67,7 +67,7 @@ soundcloud_subscribe = "https://soundcloud.com/user-716837148"
 description = "<p>Welcome to the Advance Tech Podcast bringing you news you won’t hear in the mainstream media. Hosted by Alexandra Moxin and Adam Dymitruk. We provide a spotlight for innovative and disruptive initiatives and interview guests defining the technology of tomorrow.</p><p>Advance Tech Media is dedicated to advancing research and supporting the responsible application of bleeding edge technology and practices that foster quality, equality and sustainability."
 media_prefix = "http://advancetechmedia.org/"
   [params.feed]
-    feed_copyright = "Copyright 2017 Advance Tech Media" #do not use markdown in this field; it is used in the feed
+    feed_copyright = "Copyright 2017 - 2018 Advance Tech Media" #do not use markdown in this field; it is used in the feed
     itunes_subtitle = "Bringing you the latest in technology, sustainability and open source news!" #no markdown or HTML
     itunes_author = "Alexandra Moxin" #no markdown or HTML
     itunes_summary = "The Advance Tech Podcast brings you the latest in bleeding edge technology and open source news you won’t hear in the mainstream media. Hosted by Alexandra Moxin and Adam Dymitruk. We aim to give you the unbiased truth and interview guests who are defining the technology of tomorrow." # Limited to 4000 characters or less, plain text, no HTML
