--- a/config.toml
+++ b/config.toml
@@ -43,10 +43,9 @@ themesdir = "themes"
     url = "community"
 
 #[[Menu.Main]]
-#    name = "Podcasts"
-#    identifier = "podcasts"
-#    url = "books"
-#    parent = "resources"
+#    name = "Syndicate"
+#    identifier = "syndicatedpodcasts"
+#    url = "syndicate"
 
 [params]
 site_theme = "blue"
@@ -110,7 +109,7 @@ media_prefix = "http://advancetechmedia.org/"
     [params.authors.Alex]
       name = "Alexandra Moxin"
       thumbnail = "img/host/Alex.jpg"
-      bio = "Founder of Advance Tech Media and Host of the Advance Tech Podcast, Alexandra is dedicated to advancing the research and responsible application of bleeding edge technology and in just one year has grown a global audience base to over 250,000 listens. Alexandra is CEO and CoFounder of a digital services company with an early stage social/blockchain project and is a featured Speaker and Educator with the BC Blockchain Forum. She is a strong proponent of open source communities."
+      bio = "Founder and CEO of Advance Tech Media and Host of the Advance Tech Podcast, Alexandra is dedicated to advancing the research and responsible application of bleeding edge technology and in just one year has grown a global audience base to over 250,000 listens. Alexandra is CEO and CoFounder of a digital services company with an early stage social blockchain project and is a featured Speaker and Educator with the BC Blockchain Forum. She is a strong proponent of open source communities."
       [params.authors.Alex.social]
         twitter = "Alexandra933"
         linkedin = "alexandra-moxin"
