--- a/config.toml
+++ b/config.toml
@@ -60,7 +60,7 @@ android_subscribe = "http://www.subscribeonandroid.com/advancetechmedia.org/epis
 google_play_subscribe = "https://play.google.com/music/listen?u=0#/ps/Ixpkgrijhidwwxqyz4qwfh4azhm"
 #sticher_subscribe = "http://www.stitcher.com/podcast/arrested-devops-2/arrested-devops"
 soundcloud_subscribe = "https://soundcloud.com/user-716837148"
-#pocketcasts_subscribe = "http://pcasts.in/feed/feeds.soundcloud.com/users/soundcloud:users:716837148/sounds.rss"
+pocketcasts_subscribe = "https://play.pocketcasts.com/web#/podcasts/show/8e189720-0f3b-0135-ecbb-4114446340cb"
 #mailchimp_subscribe = "//arresteddevops.us3.list-manage.com/subscribe/post?u=5e4cbcac996bb9df25f970a89&amp;id=154fa76bcc"
 #rss_subscribe = "http://feed.com/myfeed" #only set this if you don't want to use the built-in feed
 description = "<p>The Advance Tech Podcast provides a spotlight for innovative and disruptive initiatives and features guests building the technology of tomorrow. Hosted by Alexandra Moxin and Adam Dymitruk. </p><p>Advance Tech Media is dedicated to advancing research and supporting the responsible application of bleeding edge technology and practices that foster quality, equality and sustainability.</p><p>Subscribe below and check out our brand new [commercial site](https://advancetechmedia.com/)"
@@ -114,7 +114,7 @@ media_prefix = "http://advancetechmedia.org/"
         twitter = "Alexandra933"
         linkedin = "alexandra-moxin"
         facebook = "alexandra.moxin"
-        github = "lexi933"
+        github = "lexi933"knowledge
         instagram = "lexi_933/?hl=en"
         medium = "https://medium.com/@Cnecct"
 
